feat: 优化企业微信会员查询功能
- 增强智能编号识别算法，支持更多格式
- 优化数据库连接，统一使用executeQuery函数
- 新增配置检查接口 /api/wecom/config-check
- 新增状态监控接口 /api/wecom/status
- 增强测试查询接口 /api/wecom/test-query
- 改进会员信息展示，增加年龄计算和手机号脱敏
- 优化用户体验，更友好的错误提示和帮助信息
- 新增配置检查脚本和测试脚本
- 更新README文档，完善企业微信配置指南
- 修复结算页面数据库连接问题

--- a/docs/企业微信配置指南.md
+++ b/docs/企业微信配置指南.md
@@ -1,171 +1,227 @@
 # 企业微信配置指南
 
-## 📋 配置信息总览
+## 📋 配置概述
 
-### 您的应用信息
+本文档将指导您完成企业微信自建应用的配置，实现会员查询功能。
+
+## 🔧 企业微信后台配置步骤
+
+### 1. 登录企业微信管理后台
+
+1. 访问 [企业微信管理后台](https://work.weixin.qq.com/wework_admin/)
+2. 使用企业管理员账号登录
+
+### 2. 创建自建应用
+
+1. 进入 **应用管理** → **应用**
+2. 点击 **创建应用**
+3. 填写应用信息：
+   - **应用名称**：会员查询系统
+   - **应用介绍**：用于查询会员信息的自建应用
+   - **应用logo**：上传合适的图标
+
+### 3. 配置接收消息
+
+1. 在应用详情页面，找到 **接收消息** 配置区域
+2. 点击 **设置API接收**
+
+#### 3.1 服务器配置
+
+**URL配置：**
 ```
-AgentId（应用ID）: 1000011
-Secret（应用密钥）: e2qf4MOg62XHL2QkTZg5cyUkHb8X0JW0G7vvHxXbazA
-Token（接收消息Token）: L411dhQg
-服务器IP: 149.112.117.21
-```
-
-### 需要您提供的信息
-- **企业ID (corp_id)**: 在企业微信管理后台首页获取，格式如 `ww1234567890abcdef`
-
-## 🔧 配置步骤
-
-### 第一步：登录企业微信管理后台
-
-1. 访问：https://work.weixin.qq.com/
-2. 使用管理员账号登录
-3. 进入企业管理界面
-
-### 第二步：获取企业ID
-
-1. 在管理后台首页找到**企业信息**
-2. 复制**企业ID**（格式：ww开头的字符串）
-3. 保存此ID，稍后需要用到
-
-### 第三步：配置应用
-
-1. 进入【应用管理】
-2. 找到您的应用（AgentId: 1000011）
-3. 点击应用名称进入详情
-
-#### 3.1 配置接收消息
-- 点击【接收消息】设置
-- 填写以下信息：
-```
-接收消息URL: https://your-domain.com/api/wecom/message
-Token: L411dhQg
-EncodingAESKey: 点击"随机生成"按钮（系统会自动生成）
+https://admin.xinghun.info/api/wecom/message
 ```
 
-#### 3.2 配置可信域名和IP
-- 在【网页授权及JS-SDK】设置中
-- 添加可信域名：`your-domain.com`
-- 在【企业可信IP】中添加：`149.112.117.21`
+**Token配置：**
+```
+L411dhQg
+```
+> 💡 建议点击"随机获取"按钮生成新的Token，然后更新系统配置
 
-#### 3.3 设置应用权限
-确保应用具有以下权限：
-- ✅ 发送应用消息
-- ✅ 接收消息与事件
-- ✅ 通讯录管理（可选）
+**EncodingAESKey配置：**
+```
+点击"随机获取"按钮生成43位密钥
+```
 
-### 第四步：更新系统配置
+#### 3.2 消息类型配置
 
-获得企业ID后，使用以下方式更新系统配置：
+确保勾选以下消息类型：
+- ✅ **用户发送的普通消息** - 必需
+- ✅ **自定义菜单操作** - 可选
+- ✅ **审批状态通知事件** - 可选
 
-#### 方法1：通过API接口更新
+### 4. 配置应用权限
+
+1. 在应用详情页面，找到 **权限管理**
+2. 确保以下权限已开启：
+   - **通讯录** - 读取企业通讯录
+   - **应用** - 发送应用消息
+   - **客户联系** - 读取客户信息（如果需要）
+
+### 5. 获取应用信息
+
+记录以下信息用于系统配置：
+- **企业ID (corp_id)**
+- **应用ID (agent_id)**
+- **应用Secret (secret)**
+
+## 🗄️ 数据库配置
+
+### 1. 创建企业微信配置表
+
+```sql
+CREATE TABLE IF NOT EXISTS wecom_config (
+  id INT PRIMARY KEY AUTO_INCREMENT,
+  corp_id VARCHAR(100) NOT NULL COMMENT '企业ID',
+  agent_id VARCHAR(100) NOT NULL COMMENT '应用ID',
+  secret VARCHAR(200) NOT NULL COMMENT '应用Secret',
+  token VARCHAR(100) DEFAULT 'L411dhQg' COMMENT 'Token',
+  encoding_aes_key VARCHAR(200) COMMENT 'EncodingAESKey',
+  member_notification_enabled BOOLEAN DEFAULT TRUE COMMENT '是否启用会员通知',
+  notification_recipients TEXT COMMENT '通知接收者，多个用逗号分隔',
+  message_type ENUM('text', 'textcard', 'markdown') DEFAULT 'text' COMMENT '消息类型',
+  custom_message_template TEXT COMMENT '自定义消息模板',
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
+);
+```
+
+### 2. 插入配置数据
+
+```sql
+INSERT INTO wecom_config (
+  corp_id, 
+  agent_id, 
+  secret, 
+  token, 
+  encoding_aes_key,
+  member_notification_enabled,
+  notification_recipients,
+  message_type
+) VALUES (
+  'your_corp_id',           -- 替换为您的企业ID
+  'your_agent_id',          -- 替换为您的应用ID
+  'your_secret',            -- 替换为您的应用Secret
+  'L411dhQg',               -- Token
+  'your_encoding_aes_key',  -- 替换为您的EncodingAESKey
+  TRUE,
+  '@all',                   -- 通知所有成员
+  'text'
+);
+```
+
+## 🔍 配置验证
+
+### 1. 使用测试脚本验证
+
 ```bash
-curl -X POST http://your-domain.com/api/wecom/update-config \
-  -H "Content-Type: application/json" \
-  -d '{"corp_id": "您的企业ID"}'
+# 本地测试
+npm run test:wecom
+
+# 生产环境测试
+npm run test:wecom:prod
 ```
 
-#### 方法2：检查配置状态
-```bash
-curl -X GET http://your-domain.com/api/wecom/update-config
+### 2. 手动验证配置
+
+访问以下URL验证配置：
+
+```
+GET https://admin.xinghun.info/api/wecom/config-check
+GET https://admin.xinghun.info/api/wecom/status
+GET https://admin.xinghun.info/api/wecom/test-query?number=M17071
 ```
 
-### 第五步：测试功能
+### 3. 企业微信后台验证
 
-#### 5.1 测试连通性
-```bash
-curl -X GET http://your-domain.com/api/wecom/test-connection
-```
-
-#### 5.2 测试查询功能
-```bash
-curl -X POST http://your-domain.com/api/wecom/test-query \
-  -H "Content-Type: application/json" \
-  -d '{"message": "M17071"}'
-```
-
-#### 5.3 测试通知功能
-```bash
-curl -X POST http://your-domain.com/api/wecom/test-notification
-```
-
-## 📱 验证配置
-
-### 验证URL回调
-1. 在企业微信应用设置中点击【验证URL】
-2. 如果成功，会显示"验证成功"
-3. 如果失败，请检查：
-   - IP白名单是否正确配置
-   - 接收消息URL是否可访问
+1. 在企业微信后台点击 **保存** 按钮
+2. 系统会自动验证URL配置
+3. 如果验证失败，检查以下项目：
+   - URL是否正确
    - Token是否匹配
+   - 服务器是否正常运行
 
-### 验证消息接收
-1. 在企业微信应用中发送测试消息
-2. 检查服务器日志是否收到消息
-3. 测试会员编号查询功能
+## 🚨 常见问题
 
-## 🛠️ 故障排除
+### 1. URL验证失败
 
-### 常见问题
+**可能原因：**
+- URL格式错误
+- Token不匹配
+- 服务器未启动
 
-#### 1. URL验证失败
-**错误**: "请求URL超时" 或 "验证失败"
-**解决方案**:
-- 检查服务器IP是否在白名单中
-- 确认接收消息URL格式正确
-- 验证Token是否匹配
+**解决方案：**
+1. 检查URL格式：`https://admin.xinghun.info/api/wecom/message`
+2. 确保Token一致
+3. 重启服务器
 
-#### 2. IP访问被拒绝 (错误码60020)
-**错误**: "not allow to access from your ip"
-**解决方案**:
-- 在企业微信后台添加服务器IP: `149.112.117.21`
-- 等待5-10分钟配置生效
+### 2. 消息接收失败
 
-#### 3. 消息接收不到
-**可能原因**:
+**可能原因：**
 - 应用权限不足
-- 回调URL配置错误
-- 服务器无法访问
+- 消息类型未配置
+- 服务器处理异常
 
-**检查步骤**:
-1. 验证应用权限设置
-2. 检查服务器日志
-3. 测试URL是否可访问
+**解决方案：**
+1. 检查应用权限配置
+2. 确保勾选"用户发送的普通消息"
+3. 查看服务器日志
 
-### 调试工具
+### 3. 无法发送消息
 
-#### 查看配置状态
-访问：`http://your-domain.com/api/wecom/update-config`
+**可能原因：**
+- Access Token过期
+- 应用Secret错误
+- 用户不在可见范围内
 
-#### 测试消息处理
-访问：`http://your-domain.com/api/wecom/test-query`
+**解决方案：**
+1. 检查应用Secret配置
+2. 确保用户已添加到应用可见范围
+3. 重新获取Access Token
 
-#### 查看企业微信API响应
-访问：`http://your-domain.com/api/wecom/test-connection`
+## 📱 使用测试
+
+### 1. 在企业微信中测试
+
+1. 打开企业微信应用
+2. 找到刚创建的应用
+3. 发送会员编号进行测试：
+   ```
+   M17071
+   10921
+   A1234
+   ```
+
+### 2. 预期结果
+
+- 发送编号后，系统会返回详细的会员信息
+- 发送"帮助"会显示使用说明
+- 发送无效编号会提示未找到
+
+## 🔄 配置更新
+
+如果需要更新配置：
+
+1. **更新Token：**
+   - 在企业微信后台重新生成Token
+   - 更新数据库中的token字段
+
+2. **更新EncodingAESKey：**
+   - 在企业微信后台重新生成EncodingAESKey
+   - 更新数据库中的encoding_aes_key字段
+
+3. **更新应用信息：**
+   - 如果重新创建了应用，更新corp_id、agent_id、secret
 
 ## 📞 技术支持
 
-如遇到配置问题，请提供以下信息：
-1. 企业微信后台的错误信息截图
-2. 服务器日志相关部分
-3. 当前配置状态（通过API获取）
+如果遇到配置问题，可以：
 
-配置完成后，您就可以在企业微信中通过发送会员编号来查询会员详细信息了！
-
-## 🎯 使用示例
-
-配置完成后的使用方法：
-
-```
-在企业微信应用中发送：
-- M17071    → 返回M17071会员的详细信息
-- 10921     → 返回10921会员的详细信息
-- A1234     → 返回A1234会员的详细信息
-- 帮助      → 返回使用说明
-```
+1. 查看服务器日志
+2. 使用测试脚本诊断
+3. 检查企业微信后台配置
+4. 联系技术支持
 
 ---
 
-**配置完成标志**：
-- ✅ 企业微信URL验证成功
-- ✅ 发送测试消息能收到自动回复
-- ✅ 发送会员编号能查询到信息 
+**配置完成后，您的企业微信应用就可以正常接收和处理会员查询请求了！** 
